{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 66,
  "lineage": "c2daec6d-fc77-be55-b2b6-765633b1a565",
  "resources": [
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-083e5a2fed1d7c98f",
            "domain": "vpc",
            "id": "eipalloc-0842c34105786fb9a",
            "network_interface": "eni-0952221fe4756b9ed",
            "private_dns": "ip-10-20-255-169.us-west-2.compute.internal",
            "private_ip": "10.20.255.169",
            "public_dns": "ec2-52-43-95-38.us-west-2.compute.amazonaws.com",
            "public_ip": "52.43.95.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05f0af7dfdb1ea562",
            "domain": "vpc",
            "id": "eipalloc-054bab0d79b2e90b8",
            "network_interface": "eni-0e71897225295f7ee",
            "private_dns": "ip-10-20-254-37.us-west-2.compute.internal",
            "private_ip": "10.20.254.37",
            "public_dns": "ec2-44-224-175-65.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.175.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-066e587eaf51fb4f9",
            "domain": "vpc",
            "id": "eipalloc-070d4702a9cb5e452",
            "network_interface": "eni-0ec1cd13ec2c498d5",
            "private_dns": "ip-10-20-253-125.us-west-2.compute.internal",
            "private_ip": "10.20.253.125",
            "public_dns": "ec2-52-37-208-35.us-west-2.compute.amazonaws.com",
            "public_ip": "52.37.208.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07be3bbd2a280e1a3",
            "domain": "vpc",
            "id": "eipalloc-0178ee1826a14d9e8",
            "network_interface": "eni-08efbf3212c832428",
            "private_dns": "ip-10-22-255-226.us-west-2.compute.internal",
            "private_ip": "10.22.255.226",
            "public_dns": "ec2-44-229-129-252.us-west-2.compute.amazonaws.com",
            "public_ip": "44.229.129.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02bd0c2a0097797b1",
            "domain": "vpc",
            "id": "eipalloc-05e47debd7707658e",
            "network_interface": "eni-0363f368a3d7dce7b",
            "private_dns": "ip-10-22-254-204.us-west-2.compute.internal",
            "private_ip": "10.22.254.204",
            "public_dns": "ec2-52-24-15-51.us-west-2.compute.amazonaws.com",
            "public_ip": "52.24.15.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0330a3966cea7a056",
            "domain": "vpc",
            "id": "eipalloc-031be8b026b53a960",
            "network_interface": "eni-0e647f812a3589564",
            "private_dns": "ip-10-22-253-234.us-west-2.compute.internal",
            "private_ip": "10.22.253.234",
            "public_dns": "ec2-44-230-37-140.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.37.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ec15cdb9907c1fc0",
            "owner_id": "589815280396",
            "tags": {
              "Name": "igw-hub-usw2",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c8d7f4ae83c40d87",
            "owner_id": "589815280396",
            "tags": {
              "Name": "igw-partner-usw2",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0842c34105786fb9a",
            "id": "nat-045fe81bdea8bc338",
            "network_interface_id": "eni-0952221fe4756b9ed",
            "private_ip": "10.20.255.169",
            "public_ip": "52.43.95.38",
            "subnet_id": "subnet-01cf63b9d7d5a67a2"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054bab0d79b2e90b8",
            "id": "nat-0bc6fbb9947a986f8",
            "network_interface_id": "eni-0e71897225295f7ee",
            "private_ip": "10.20.254.37",
            "public_ip": "44.224.175.65",
            "subnet_id": "subnet-0c57d33909bc78c5a"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070d4702a9cb5e452",
            "id": "nat-06b720ca3597135be",
            "network_interface_id": "eni-0ec1cd13ec2c498d5",
            "private_ip": "10.20.253.125",
            "public_ip": "52.37.208.35",
            "subnet_id": "subnet-062fa9b6c9c04e8bd"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0178ee1826a14d9e8",
            "id": "nat-00d42291f5e4816bd",
            "network_interface_id": "eni-08efbf3212c832428",
            "private_ip": "10.22.255.226",
            "public_ip": "44.229.129.252",
            "subnet_id": "subnet-0d678dff3eaf9f41e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e47debd7707658e",
            "id": "nat-0dec57816db9b6299",
            "network_interface_id": "eni-0363f368a3d7dce7b",
            "private_ip": "10.22.254.204",
            "public_ip": "52.24.15.51",
            "subnet_id": "subnet-0537e10d0186effb4"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031be8b026b53a960",
            "id": "nat-0bb192110ae08dc9c",
            "network_interface_id": "eni-0e647f812a3589564",
            "private_ip": "10.22.253.234",
            "public_ip": "44.230.37.140",
            "subnet_id": "subnet-0310af0dde09f311c"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0114dc633aa67c49a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-045fe81bdea8bc338",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0114dc633aa67c49a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_nat_gateway.nats",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c322ed7191751c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0bc6fbb9947a986f8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c322ed7191751c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_nat_gateway.nats",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4f13781ff0f80d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-06b720ca3597135be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4f13781ff0f80d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_eip.nat_eips",
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_nat_gateway.nats",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eff4ee1c2e31de711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-00d42291f5e4816bd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eff4ee1c2e31de71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_nat_gateway.nats",
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f385097ccc51373d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0dec57816db9b6299",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f385097ccc51373d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_nat_gateway.nats",
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-036e291ddc78d8cfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0bb192110ae08dc9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036e291ddc78d8cfe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_eip.nat_eips",
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_nat_gateway.nats",
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peers",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.22.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0114dc633aa67c49a1700579185",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0114dc633aa67c49a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-04061c297efb32242"
          },
          "dependencies": [
            "aws_vpc_peering_connection.hub_partner_usw2",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_vpc.vpc",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.22.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c322ed7191751c71700579185",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c322ed7191751c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-04061c297efb32242"
          },
          "dependencies": [
            "aws_vpc_peering_connection.hub_partner_usw2",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_vpc.vpc",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.22.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4f13781ff0f80d61700579185",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4f13781ff0f80d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-04061c297efb32242"
          },
          "dependencies": [
            "aws_vpc_peering_connection.hub_partner_usw2",
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_vpc.vpc",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peers",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": []
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec15cdb9907c1fc0",
            "id": "r-rtb-04f0cce21eb7dbd981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f0cce21eb7dbd98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_internet_gateway.igw",
            "module.hub_usw2_vpc.aws_route_table.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c8d7f4ae83c40d87",
            "id": "r-rtb-0fc95c508e24e1e811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc95c508e24e1e81",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_internet_gateway.igw",
            "module.partner_usw2_vpc.aws_route_table.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peers",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.22.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f0cce21eb7dbd981700579185",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f0cce21eb7dbd98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-04061c297efb32242"
          },
          "dependencies": [
            "aws_vpc_peering_connection.hub_partner_usw2",
            "module.hub_usw2_vpc.aws_route_table.public",
            "module.hub_usw2_vpc.aws_vpc.vpc",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peers",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": []
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0114dc633aa67c49a",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-045fe81bdea8bc338",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-hub-usw2-private-us-west-2a-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c322ed7191751c7",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0bc6fbb9947a986f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-hub-usw2-private-us-west-2b-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4f13781ff0f80d6",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06b720ca3597135be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-hub-usw2-private-us-west-2c-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eff4ee1c2e31de71",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00d42291f5e4816bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-partner-usw2-private-us-west-2a-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f385097ccc51373d",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0dec57816db9b6299",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-partner-usw2-private-us-west-2b-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-036e291ddc78d8cfe",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0bb192110ae08dc9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-partner-usw2-private-us-west-2c-0",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04f0cce21eb7dbd98",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec15cdb9907c1fc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-hub-usw2-public",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc95c508e24e1e81",
            "owner_id": "589815280396",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8d7f4ae83c40d87",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-partner-usw2-public",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022c81f0f0953236c",
            "route_table_id": "rtb-0114dc633aa67c49a",
            "subnet_id": "subnet-0ce6dc4c7a767f6d1"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.private",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9d1024d02fd7f2",
            "route_table_id": "rtb-08c322ed7191751c7",
            "subnet_id": "subnet-02a5d50a2a892027c"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.private",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05134df0d11402247",
            "route_table_id": "rtb-0f4f13781ff0f80d6",
            "subnet_id": "subnet-081aa4dedbbe68cca"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.private",
            "module.hub_usw2_vpc.aws_subnet.private",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d38306da09cfc9",
            "route_table_id": "rtb-0eff4ee1c2e31de71",
            "subnet_id": "subnet-08e8b14132d8b8fb0"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.private",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092151132e832c735",
            "route_table_id": "rtb-0f385097ccc51373d",
            "subnet_id": "subnet-0e1e4bbc3c4e58cea"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.private",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078475d1f8b3536bc",
            "route_table_id": "rtb-036e291ddc78d8cfe",
            "subnet_id": "subnet-0040cfc3c87acb91e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.private",
            "module.partner_usw2_vpc.aws_subnet.private",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0836c8f8a259fadd4",
            "route_table_id": "rtb-04f0cce21eb7dbd98",
            "subnet_id": "subnet-01cf63b9d7d5a67a2"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.public",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa58b4b0487f8f2c",
            "route_table_id": "rtb-04f0cce21eb7dbd98",
            "subnet_id": "subnet-0c57d33909bc78c5a"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.public",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bccd432d4cdbd4a2",
            "route_table_id": "rtb-04f0cce21eb7dbd98",
            "subnet_id": "subnet-062fa9b6c9c04e8bd"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_route_table.public",
            "module.hub_usw2_vpc.aws_subnet.public",
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ed9c9919f74ecb",
            "route_table_id": "rtb-0fc95c508e24e1e81",
            "subnet_id": "subnet-0d678dff3eaf9f41e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.public",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01503f106cd5b71ee",
            "route_table_id": "rtb-0fc95c508e24e1e81",
            "subnet_id": "subnet-0537e10d0186effb4"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.public",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bcab516046320f",
            "route_table_id": "rtb-0fc95c508e24e1e81",
            "subnet_id": "subnet-0310af0dde09f311c"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_route_table.public",
            "module.partner_usw2_vpc.aws_subnet.public",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0ce6dc4c7a767f6d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.12.0/22",
            "id": "subnet-0ce6dc4c7a767f6d1",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-hub-usw2-us-west-2a-3",
              "immutable_metadata": "{ \"purpose\": \"private-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-02a5d50a2a892027c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.16.0/22",
            "id": "subnet-02a5d50a2a892027c",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-hub-usw2-us-west-2b-3",
              "immutable_metadata": "{ \"purpose\": \"private-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-081aa4dedbbe68cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.20.20.0/22",
            "id": "subnet-081aa4dedbbe68cca",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-hub-usw2-us-west-2c-3",
              "immutable_metadata": "{ \"purpose\": \"private-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-08e8b14132d8b8fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.22.12.0/22",
            "id": "subnet-08e8b14132d8b8fb0",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-partner-usw2-us-west-2a-3",
              "immutable_metadata": "{ \"purpose\": \"private-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0e1e4bbc3c4e58cea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.22.16.0/22",
            "id": "subnet-0e1e4bbc3c4e58cea",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-partner-usw2-us-west-2b-3",
              "immutable_metadata": "{ \"purpose\": \"private-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0040cfc3c87acb91e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.22.20.0/22",
            "id": "subnet-0040cfc3c87acb91e",
            "map_public_ip_on_launch": false,
            "owner_id": "589815280396",
            "tags": {
              "Name": "priv-partner-usw2-us-west-2c-3",
              "immutable_metadata": "{ \"purpose\": \"private-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-01cf63b9d7d5a67a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.255.0/24",
            "id": "subnet-01cf63b9d7d5a67a2",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-hub-usw2-us-west-2a-3",
              "immutable_metadata": "{ \"purpose\": \"public-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0c57d33909bc78c5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.254.0/24",
            "id": "subnet-0c57d33909bc78c5a",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-hub-usw2-us-west-2b-3",
              "immutable_metadata": "{ \"purpose\": \"public-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-062fa9b6c9c04e8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.20.253.0/24",
            "id": "subnet-062fa9b6c9c04e8bd",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-hub-usw2-us-west-2c-3",
              "immutable_metadata": "{ \"purpose\": \"public-hub-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0d678dff3eaf9f41e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.22.255.0/24",
            "id": "subnet-0d678dff3eaf9f41e",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-partner-usw2-us-west-2a-3",
              "immutable_metadata": "{ \"purpose\": \"public-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0537e10d0186effb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.22.254.0/24",
            "id": "subnet-0537e10d0186effb4",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-partner-usw2-us-west-2b-3",
              "immutable_metadata": "{ \"purpose\": \"public-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:subnet/subnet-0310af0dde09f311c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.22.253.0/24",
            "id": "subnet-0310af0dde09f311c",
            "map_public_ip_on_launch": true,
            "owner_id": "589815280396",
            "tags": {
              "Name": "pub-partner-usw2-us-west-2c-3",
              "immutable_metadata": "{ \"purpose\": \"public-partner-usw2\" }",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b6b4f5de882afd6e"
          },
          "dependencies": [
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.hub_usw2_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.hub_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:vpc/vpc-0cad1378e75e1e4f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-02edf218b080281bc",
            "default_route_table_id": "rtb-020c8a1078be425dd",
            "default_security_group_id": "sg-0b54d29115cc8f7c8",
            "dhcp_options_id": "dopt-1064e668",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cad1378e75e1e4f3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020c8a1078be425dd",
            "owner_id": "589815280396",
            "tags": {
              "Name": "hub-usw2"
            }
          }
        }
      ]
    },
    {
      "module": "module.partner_usw2_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.partner_usw2_vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589815280396:vpc/vpc-0b6b4f5de882afd6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.0.0/16",
            "default_network_acl_id": "acl-02b7bb77fa26acac7",
            "default_route_table_id": "rtb-06d72fdf966944a7e",
            "default_security_group_id": "sg-04e84f24fe22fc551",
            "dhcp_options_id": "dopt-1064e668",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6b4f5de882afd6e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d72fdf966944a7e",
            "owner_id": "589815280396",
            "tags": {
              "Name": "partner-usw2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "hub_partner_usw2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-04061c297efb32242",
            "peer_owner_id": "589815280396",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0b6b4f5de882afd6e",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "hub-partner-usw2",
              "env": "hub",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cad1378e75e1e4f3"
          },
          "dependencies": [
            "module.hub_usw2_vpc.aws_vpc.vpc",
            "module.partner_usw2_vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}